--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -20,9 +20,11 @@
         }
 
         .modal-content {
-            width: 68%;
+            width: 49%;
             position: initial;
-            margin: 16%;
+            margin-left: 27%;
+            margin-top: 8%;
+            background: lightskyblue;
         }
         img#match-image {
             position: relative;
